# bbloc

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.nx  Makefile.sdl  README.md  SDL2-2.28.5.patch_usbkbd.diff
include/glad/: glad.c  glad.h
include/imgui/: imconfig.h
romfs/: UiSystem.cpp  autoexec  dark_theme  light_theme  main.cpp
src/: ApplicationWindow.cpp  ApplicationWindow.h  Controls.cpp  Controls.h  Cursor.cpp  Cursor.h  CursorManager.cpp  CursorManager.h  CursorRenderer.cpp  CursorRenderer.h  Debug.cpp  Debug.h  main.cpp
src/command/: ActivatePromptCommand.cpp  ActivatePromptCommand.h  AutoCompleteCommand.cpp  AutoCompleteCommand.h  BindCommand.cpp  BindCommand.h  CancelCommand.cpp  CancelCommand.h  CopyTextCommand.cpp  CopyTextCommand.h  CutTextCommand.cpp  CutTextCommand.h  ExecCommand.cpp  ExecCommand.h  FontSizeCommand.cpp  FontSizeCommand.h  MoveCursorCommand.cpp  MoveCursorCommand.h  OpenFileCommand.cpp  OpenFileCommand.h  PasteTextCommand.cpp  PasteTextCommand.h  QuitCommand.cpp  QuitCommand.h  ResetCVarFloatCommand.cpp  ResetCVarFloatCommand.h  ResetRenderTimeCommand.cpp  ResetRenderTimeCommand.h  SaveFileCommand.cpp  SaveFileCommand.h  SetHighLightCommand.cpp  SetHighLightCommand.h  ValidateCommand.cpp  ValidateCommand.h
src/core/: CVarCommand.cpp  CVarCommand.h  CommandFeedback.h  CommandManager.cpp  CommandManager.h  CursorContext.h  FocusTarget.h  View.h  ViewState.cpp  ViewState.h
src/core/base/: AutoCompleteCallback.h  CVar.h  CVarCallback.h  CVarRegistry.h  Command.h  CommandController.h  CommandFeedback.h  CommandRegistry.h  CommandRunner.h  FeedbackCallback.h  GlobalRegistry.h
src/core/command/: CommandCallback.h  CommandManager.cpp  CommandManager.h  CompletionCallback.h  ConditionCallback.h  FeedbackCallback.h  ItemCallback.h
src/core/command/cvar/: CVar.cpp  CVar.h  CVarBool.cpp  CVarBool.h  CVarColor.cpp  CVarColor.h  CVarFloat.cpp  CVarFloat.h  CVarInt.cpp  CVarInt.h  Color.h  TypedCVar.h  TypedCvar.h
src/core/cursor/: Cursor.cpp  Cursor.h  CursorEdit.h  PromptCursor.cpp  PromptCursor.h  TextRange.h
src/core/cursor/buffer/: BufferEdit.h  LineBuffer.cpp  LineBuffer.h  StringBuffer.cpp  StringBuffer.h  TextBuffer.h  VectorBuffer.cpp  VectorBuffer.h
src/core/cvar/: CVarBool.cpp  CVarBool.h  CVarColor.h  CVarFloat.h  CVarInt.cpp  CVarInt.h  TypedCVar.h
src/core/highlight/: HighLighter.cpp  HighLighter.h  TokenId.h
src/core/highlight/mapper/: CppMapper.h  JsonMapper.h
src/core/highlighter/: HighLightId.h  HighLighter.cpp  HighLighter.h  TokenId.h
src/core/highlighter/mapper/: CppMapper.h  JsonMapper.h
src/core/highlighter/query/: cpp_query.h  json_query.h
src/core/renderer/: AtlasArray.cpp  AtlasArray.h  AtlasEntry.h  QuadBuffer.cpp  QuadBuffer.h  QuadProgram.cpp  QuadProgram.h  QuadTexture.cpp  QuadTexture.h  QuadVertex.h  Shader.cpp  Shader.h
src/core/theme/: ColorId.h  DimensionId.h  Theme.cpp  Theme.h
src/cursor/: RopeCursor.cpp  RopeCursor.h  StringCursor.cpp  StringCursor.h  VectorCursor.cpp  VectorCursor.h
src/editor/: Editor.cpp  Editor.h  EditorState.cpp  EditorState.h
src/infobar/: InfoBar.cpp  InfoBar.h  InfoBarState.h
src/prompt/: Prompt.cpp  Prompt.h  PromptState.cpp  PromptState.h
src/renderer/: Font.cpp  Font.h  FontTexture.cpp  FontTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/renderer/sprite/: SpriteBuffer.cpp  SpriteBuffer.h  SpriteShader.cpp  SpriteShader.h  Vertex.h
